fix checkout page spacing

--- a/src/components/Cart/style.scss
+++ b/src/components/Cart/style.scss
@@ -1,4 +1,6 @@
 .cart {
+  padding-left: 49px;
+
   &__items {
     > * + * {
       margin-top: 20px;
